[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/_Debug/TEST_SCENE_2.gd" type="Script" id=1]
[ext_resource path="res://Scripts/GameSystems/NewGameManager.gd" type="Script" id=2]
[ext_resource path="res://Scripts/GameSystems/KeepDataManager.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Objects/GameObjects/TapeRecorder.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/Screens/Menus/EditTapeScreen.tscn" type="PackedScene" id=5]

[node name="TEST_SCENE_2" type="Node2D"]
script = ExtResource( 1 )

[node name="KeepDataManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="NewGameManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="EditTapeScreen" parent="." instance=ExtResource( 5 )]
__meta__ = {
"_edit_group_": true
}

[node name="TapeRecorder" parent="." instance=ExtResource( 4 )]

[connection signal="ready" from="NewGameManager" to="NewGameManager" method="_set_new_game_data"]
